# InstantMeshForMaya

./: .gitmodules  CMakeLists.txt  README.md
src/: instantMeshProcess.cpp  instantMeshProcess.h
